add css componente delete all itens

--- a/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -5,7 +5,7 @@
       <input type="checkbox">
       <input type="text">
 
-      <button>
+      <button class="button-trash">
         <img src="assets/icons/icon-trash.svg">
       </button>
     </li>
