--- a/src/app/modules/home/components/todo-list/todo-list.component.scss
+++ b/src/app/modules/home/components/todo-list/todo-list.component.scss
@@ -1,5 +1,9 @@
 @import '../../../../../dist/scss/variables.scss';
 
+.button-trash{
+  transform: scale(1.3);
+}
+
 section{
   width: 100%;
   min-height: 250px;
@@ -28,6 +32,8 @@ section{
       input{
         &[type="checkbox"]{
           width: 5%;
+          cursor: pointer;
+          transform: scale(1.2);
         }
         &[type="text"]{
           width: 80%;
