--- a/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -1,9 +1,9 @@
-<section>
+<section [ngClass]="{'loading': !taskList.length}">
 
-  <ul>
-    <li>
-      <input type="checkbox">
-      <input type="text">
+  <ul *ngIf="taskList.length">
+    <li *ngFor="let item of taskList; let i = index">
+      <input type="checkbox" [(ngModel)]="item.checked">
+      <input type="text" [(ngModel)]="item.task">
 
       <button>
         <img src="assets/icons/icon-trash.svg">
@@ -11,7 +11,8 @@
     </li>
   </ul>
 
+
 </section>
 
 <app-todo-input-add-itens></app-todo-input-add-itens>
-<app-todo-button-delete-all></app-todo-button-delete-all>
+<app-todo-button-delete-all *ngIf="taskList.length"></app-todo-button-delete-all>
